tests/fail/test-neg-varNoDecl.ctds

integer mul(integer a, integer b){
  integer x;
  return a * b;
}

integer sum(integer a, integer b){
  return a + x;
}